need to fix button disabled featue in dark mode

--- a/src/components/style/switcher.css
+++ b/src/components/style/switcher.css
@@ -2,7 +2,6 @@
   --darkbg: #251d29;
   --darkt: #ffd1f7;
   --lightbg: #fff;
-  --lightt: #d43370;
 
   --toggleHeight: 16em;
   --toggleWidth: 30em;
